Better initial comment for RQ4

--- a/ADM_HW2.ipynb
+++ b/ADM_HW2.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "source": [
     "## Top Languages\n",
-    "First, we want to check in what languages most of the reviews are written in. We can do this by grouping the dataset by its `language` column, then by counting how many unique elements (languages) there are by using the `size()` method, and finally by sorting it and slicing the top 3.\n",
+    "First, we want to check in what languages most of the reviews are written in.\n",
     "\n",
     "We can manage to load the whole dataset by only selecting the columns we will need for our analysis."
    ]
