RQ7 added missing final comment

--- a/ADM_HW2.ipynb
+++ b/ADM_HW2.ipynb
@@ -1093,6 +1093,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "which indicates the variables do have some correlation.\n",
+    "\n",
+    "Hence we should be able to safely conclude that the two **are not** independent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# [RQ8]"
    ]
   },
