RQ8 - changed timestamp format

--- a/ADM_HW2.ipynb
+++ b/ADM_HW2.ipynb
@@ -2337,7 +2337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_rq8 = df_rq8[(df_rq8['timestamp_updated'].dt.year <= 2021) & (df_rq8['weighted_vote_score'] > 0)]"
+    "df_rq8 = df_rq8[(pd.to_datetime(df_rq8['timestamp_updated']).dt.year <= 2021) & (df_rq8['weighted_vote_score'] > 0)]"
    ]
   },
   {
@@ -2353,7 +2353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delta = steam.norm_col(pd.to_numeric(df_rq8['timestamp_updated'] - df_rq8['timestamp_created']))\n",
+    "delta = steam.norm_col(df_rq8['timestamp_updated'] - df_rq8['timestamp_created'])\n",
     "score = steam.norm_col(df_rq8['weighted_vote_score'])"
    ]
   },
@@ -2488,7 +2488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delta_recomm = steam.norm_col(pd.to_numeric(df_recomm['timestamp_updated'] - df_recomm['timestamp_created']))\n",
+    "delta_recomm = steam.norm_col(df_recomm['timestamp_updated'] - df_recomm['timestamp_created'])\n",
     "score_recomm = steam.norm_col(df_recomm['weighted_vote_score'])"
    ]
   },
@@ -2529,7 +2529,7 @@
    "source": [
     "df_notrecomm = df_rq8[df_rq8['recommended'] == False]\n",
     "\n",
-    "delta_notrecomm = steam.norm_col(pd.to_numeric(df_recomm['timestamp_updated'] - df_recomm['timestamp_created']))\n",
+    "delta_notrecomm = steam.norm_col(df_recomm['timestamp_updated'] - df_recomm['timestamp_created'])\n",
     "score_notrecomm = steam.norm_col(df_recomm['weighted_vote_score'])\n",
     "\n",
     "print(\"Time Difference\")\n",
