Update: TQ2.ipynb completed

--- a/TQ2.ipynb
+++ b/TQ2.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "Analysing the main function **splitSwap(a, l, n)**, we observe it is a recursive function which return in the case of $n=1$.\n",
     "\n",
-    "In the case of $n>1$ it calls recursively itself two times as **splitSwap(a, l, n/2)** and **splitSwap(a, l+ n /2, n/2)**, it also execute the subroutine SwapList(a, l, n).\n",
+    "In the case of $n>1$ it calls recursively itself two times as **splitSwap(a, l, n/2)** and **splitSwap(a, l+ n /2, n/2)**, it also execute the subroutine **swapList(a, l, n)**.\n",
     "\n",
     "We have two recursion and we can calculate the equation of the recurrence as: **$T(n) = 2*T(n/2) + O(n)$**.\n",
     "\n",
@@ -100,6 +100,22 @@
    "metadata": {},
    "source": [
     "## 2) What does this algorithm do? Is it optimal? Describe the mechanism of the algorithm in details, we do not want to know only its final result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "The function **splitSwap(a, l, n)** is a recursive function, it takes as parameters an array **a**, an index **i** and a lenght **n**.\n",
+    "It calls itself recursively two time as  **splitSwap(a, l, n/2)** and **splitSwap(a, l+ n /2, n/2)**, and then execute the subroutine **swapList(a, l, n)**.\n",
+    "\n",
+    "The subroutine **swapList(a, l, n)**, perform a loop in the range 0, $n/2$; swapping the element of the array with index $l+i$ with the element of the array with index $l + n/2 + i$.\n",
+    "\n",
+    "The base case of the **splitSwap(a, l, n)** is $n=1$, the function returns when the recursion reaches n=1, after performing an halving operation on n at each step.\n",
+    "\n",
+    "\n",
+    "The Algorithm is not optimal because it can be further simplified to be linear with a complexity of **$O(n)$**."
    ]
   },
   {
